--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+#Entorno Virtual
 venv/
-*.pyc
+
+#Variables de Entorno
+**/.env
+
+#Python
 __pycache__/
+*.pyc
+*.pyo
+
+#Django
+*.log
 db.sqlite3
-.env
+
 .vscode/
